--- a/style.css
+++ b/style.css
@@ -441,6 +441,28 @@ a {
   box-shadow: 0 18px 50px rgba(0, 0, 0, 0.45);
 }
 
+.type-line {
+  margin-top: 10px;
+  font-size: 1.05rem;
+  line-height: 1.5;
+  opacity: 0.92;
+}
+
+.caret {
+  display: inline-block;
+  width: 0.6ch;
+  margin-left: 2px;
+  border-right: 2px solid currentColor;
+  animation: caretBlink 0.9s steps(1) infinite;
+  height: 1em;
+  vertical-align: -0.1em;
+}
+
+@keyframes caretBlink {
+  50% { opacity: 0; }
+}
+
+
 
 @media (max-width: 920px) {
   .hero-inner {
